Add LinkedIn to social links

--- a/src/data/footer_links.yml
+++ b/src/data/footer_links.yml
@@ -1,3 +1,5 @@
 items:
   - icon: fa-brands fa-gitlab
     link: https://gitlab.com/lukzmu/
+  - icon: fa-brands fa-linkedin
+    link: https://www.linkedin.com/in/lukzmu/
