Add dev.to link to footer

--- a/src/data/footer_links.yml
+++ b/src/data/footer_links.yml
@@ -3,3 +3,5 @@ items:
     link: https://gitlab.com/lukzmu/
   - icon: fa-brands fa-linkedin
     link: https://www.linkedin.com/in/lukzmu/
+  - icon: fa-brands fa-dev
+    link: https://dev.to/lukzmu
