--- a/src/data/events.yml
+++ b/src/data/events.yml
@@ -1,4 +1,7 @@
 items:
+  - title: Łukasz starts job at Infermedica
+    date: August 2023
+    icon: 💼
   - title: Anna receives a PhD in Animal Sciences
     subtitle: University of Warmia and Mazury in Olsztyn.
     date: March 2023
