--- a/src/data/footer_links.yml
+++ b/src/data/footer_links.yml
@@ -1,6 +1,6 @@
 items:
-  - icon: fa-brands fa-gitlab
-    link: https://gitlab.com/lukzmu/
+  - icon: fa-brands fa-github
+    link: https://github.com/lukzmu/
   - icon: fa-brands fa-linkedin
     link: https://www.linkedin.com/in/lukzmu/
   - icon: fa-brands fa-dev
