--- a/src/data/people.yml
+++ b/src/data/people.yml
@@ -1,7 +1,7 @@
 items:
   - name: Łukasz
     avatar: lukasz.png
-    title: Software Engineer
+    title: Python Engineer
   - name: Anna
     avatar: ania.png
     title: Animal Sciences PhD
