Add emojis to events (#4)

--- a/src/data/events.yml
+++ b/src/data/events.yml
@@ -1,79 +1,79 @@
 items:
-  - title: Łukasz starts job at Infermedica
+  - title: 💼 Łukasz starts job at Infermedica
     date: August 2023
-  - title: Anna receives a PhD in Animal Sciences
+  - title: 🎓 Anna receives a PhD in Animal Sciences
     date: March 2023
-  - title: Land acquired in Kikity, Poland
+  - title: 🏡 Land acquired in Kikity, Poland
     date: February 2023
-  - title: Geralt is adopted
+  - title: 🐱 Geralt is adopted
     date: January 2022
-  - title: Trip to Canada
+  - title: 🇨🇦 Trip to Canada
     date: December 2021
-  - title: Vader is adopted
+  - title: 🐴 Vader is adopted
     date: November 2021
-  - title: 'Family car "Lambert" is bought'
+  - title: 🚗 Family car "Lambert" is bought
     date: July 2021
-  - title: Baine is adopted
+  - title: 🐴 Baine is adopted
     date: May 2021
-  - title: Anna and Łukasz get married
+  - title: 👰🏻‍♀️ Anna and Łukasz get married
     date: May 2021
     important: true
-  - title: Anna and Łukasz join Barbarzyńcy
+  - title: 🕹️ Anna and Łukasz join Barbarzyńcy
     date: April 2021
-  - title: Simba is adopted
+  - title: 🐹 Simba is adopted
     date: March 2021
-  - title: Łukasz starts job at Merixstudio
+  - title: 💼 Łukasz starts job at Merixstudio
     date: September 2020
-  - title: Łukasz starts job at Butter
+  - title: 💼 Łukasz starts job at Butter
     date: July 2018
-  - title: Anna receives a MSc in Biotechnology
+  - title: 🎓 Anna receives a MSc in Biotechnology
     date: July 2018
-  - title: Anna and Łukasz get engaged
+  - title: 💍 Anna and Łukasz get engaged
     date: September 2017
     important: true
-  - title: Trip to UAE
+  - title: 🇦🇪 Trip to UAE
     date: September 2017
-  - title: Rey and Asajj are adopted
+  - title: 🐹 Rey and Asajj are adopted
     date: April 2017
-  - title: Anna receives a BSc in Biotechnology
+  - title: 🎓 Anna receives a BSc in Biotechnology
     date: February 2017
-  - title: Trip to Czech Republic
+  - title: 🇨🇿 Trip to Czech Republic
     date: December 2016
-  - title: Anna and Łukasz get together
+  - title: 🥰 Anna and Łukasz get together
     date: November 2016
     important: true
-  - title: Łukasz starts job at UWM
+  - title: 💼 Łukasz starts job at UWM
     date: October 2016
-  - title: Kotek is adopted
+  - title: 🐱 Kotek is adopted
     date: September 2016
-  - title: Łukasz receives a MSc in Information Technology
+  - title: 🎓 Łukasz receives a MSc in Information Technology
     date: July 2016
-  - title: Wifi is adopted
+  - title: 🐺 Wifi is adopted
     date: October 2015
-  - title: Łukasz starts job at Treesat
+  - title: 💼 Łukasz starts job at Treesat
     date: October 2015
-  - title: Łukasz receives a BSc in Information Technology
+  - title: 🎓 Łukasz receives a BSc in Information Technology
     date: May 2014
-  - title: Fifi and Stefa Jr. are adopted
+  - title: 🐹 Fifi and Stefa Jr. are adopted
     date: April 2014
-  - title: Garfield is adopted
+  - title: 🐱 Garfield is adopted
     date: July 2013
-  - title: Anna goes to University
+  - title: 🎓 Anna goes to University
     date: October 2012
-  - title: Anna and Łukasz meet for the first time
+  - title: 😮 Anna and Łukasz meet for the first time
     date: September 2012
     important: true
-  - title: Luna and Stefa are adopted
+  - title: 🐹 Luna and Stefa are adopted
     date: February 2011
-  - title: Łukasz starts job at ITM Software House
+  - title: 💼 Łukasz starts job at ITM Software House
     date: September 2010
-  - title: Łukasz goes to University
+  - title: 🎓 Łukasz goes to University
     date: October 2009
-  - title: Bingo is adopted
+  - title: 🐶 Bingo is adopted
     date: November 1998
-  - title: Anna is born
+  - title: 🍼 Anna is born
     date: April 1993
     important: true
-  - title: Łukasz is born
+  - title: 🍼 Łukasz is born
     date: May 1989
     important: true
