--- a/src/data/events.yml
+++ b/src/data/events.yml
@@ -1,4 +1,6 @@
 items:
+  - title: 🇮🇹 Trip to Italy
+    date: August 2023
   - title: 💼 Łukasz starts job at Infermedica
     date: August 2023
   - title: 🎓 Anna receives a PhD in Animal Sciences
