--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -8,50 +8,95 @@ permissions:
   contents: write
 
 jobs:
-  test:
+  black:
     runs-on: ubuntu-latest
     steps:
-      - name: ✅ Checkout repository
+      - name: Checkout repository
         uses: actions/checkout@v3
-      - name: 🐍 Setup Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.11'
-      - name: 💾 Install dependencies
+      - name: Setup Python
+        uses: ./.github/workflows/composite/build_dev
+      - name: Black
         run: |
-          pip install poetry
-          poetry config virtualenvs.in-project true
-          poetry install --only dev
-      - name: 👌🏻 Check linters
-        run: |   
           source .venv/bin/activate       
           black --check --diff src/
+  
+  ruff:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+      - name: Setup Python
+        uses: ./.github/workflows/composite/build_dev
+      - name: Ruff
+        run: |
+          source .venv/bin/activate       
           ruff src/
+
+  mypy:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+      - name: Setup Python
+        uses: ./.github/workflows/composite/build_dev
+      - name: MyPy
+        run: |
+          source .venv/bin/activate       
           mypy src/
+  
+  pytest:
+    runs-on: ubuntu-latest
+    needs:
+      - black
+      - ruff
+      - mypy
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+      - name: Setup Python
+        uses: ./.github/workflows/composite/build_dev
+      - name: PyTest
+        run: |
+          source .venv/bin/activate
+          pytest --cov=src --cov-report=json
+      - name: Upload coverage reports to Codecov
+        uses: codecov/codecov-action@v3
+        env:
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+  
+  bandit:
+    runs-on: ubuntu-latest
+    needs:
+      - black
+      - ruff
+      - mypy
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+      - name: Setup Python
+        uses: ./.github/workflows/composite/build_dev
+      - name: Bandit
+        run: |
+          source .venv/bin/activate
+          bandit -r src/
       
   publish:
     runs-on: ubuntu-latest
-    needs: test
+    needs:
+      - pytest
+      - bandit
     if: github.ref == 'refs/heads/main'
     steps:
-      - name: ✅ Checkout repository
+      - name: Checkout repository
         uses: actions/checkout@v3
-      - name: 🐍 Setup Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.11'
-      - name: 💾 Install dependencies
-        run: |
-          echo "PYTHONPATH=$PYTHONPATH:./src" >> $GITHUB_ENV
-          pip install poetry
-          poetry config virtualenvs.in-project true
-          poetry install --without dev          
-      - name: 🌟 Create page content
+      - name: Setup Python
+        uses: ./.github/workflows/composite/build_prod    
+      - name: Create page content
         run: |
           source .venv/bin/activate
           cd src
           pelican content -s core/settings.py -o ~/public
-      - name: 🚀 Deploy
+      - name: Deploy to gh-pages
         uses: JamesIves/github-pages-deploy-action@v4
         with:
           folder: ~/public
