--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,10 @@ pyyaml = "^6.0"
 black = "^23.3.0"
 ruff = "^0.0.272"
 mypy = "^1.3.0"
+pytest = "^7.4.0"
+bandit = "^1.7.5"
+pytest-mock = "^3.11.1"
+pytest-cov = "^4.1.0"
 
 [build-system]
 requires = ["poetry-core"]
@@ -43,3 +47,18 @@ disallow_untyped_defs = true
 [[tool.mypy.overrides]]
 module = "yaml"
 ignore_missing_imports = true
+
+[tool.coverage.run]
+branch = true
+omit = [
+    "src/core/settings.py",
+    "src/tasks.py",
+    "*/dto.py",
+]
+
+[tool.coverage.report]
+show_missing = true
+skip_empty = true
+
+[tool.coverage.html]
+directory = ".pytest_coverage"
