--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ readme = "README.md"
 python = "^3.11"
 pelican = "^4.8.0"
 pyyaml = "^6.0"
-
+gitpython = "^3.1.37"  # Dependabot alert
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.3.0"
