Add Alicja to website (#16)

--- a/src/data/people.yml
+++ b/src/data/people.yml
@@ -5,3 +5,6 @@ items:
   - name: Anna
     avatar: ania.png
     title: Animal Sciences PhD
+  - name: Alicja
+    avatar: alicja.png
+    title: Future Rocket Scientist
