--- a/src/data/events.yml
+++ b/src/data/events.yml
@@ -1,4 +1,8 @@
 items:
+  - title: Alicja is born
+    icon: 🍼
+    date: 2023.11.23
+    important: true
   - title: Trip to Italy
     icon: 🇮🇹
     date: 2023.08.12
