Update social media links

--- a/src/data/people.yml
+++ b/src/data/people.yml
@@ -5,10 +5,10 @@ items:
     social_media:
       - name: GitHub
         icon: github
-        url: https://github.com/divinebanana
+        url: https://github.com/lukzmu
       - name: LinkedIn
         icon: linkedin
-        url: https://www.linkedin.com/in/divinebanana/
+        url: https://www.linkedin.com/in/lukzmu/
       - name: World of Warcraft
         icon: wow
         url: https://worldofwarcraft.blizzard.com/en-gb/character/eu/burning-legion/divinebanana
