--- a/src/data/people.yml
+++ b/src/data/people.yml
@@ -1,6 +1,6 @@
 items:
   - name: Łukasz
-    avatar: lukasz.png
+    avatar: lukasz.jpeg
     title: Python Engineer
     social_media:
       - name: GitHub
@@ -13,12 +13,12 @@ items:
         icon: wow
         url: https://worldofwarcraft.blizzard.com/en-gb/character/eu/burning-legion/divinebanana
   - name: Anna
-    avatar: ania.png
+    avatar: ania.jpg
     title: Animal Sciences PhD
     social_media:
       - name: World of Warcraft
         icon: wow
         url: https://worldofwarcraft.blizzard.com/en-gb/character/eu/burning-legion/have
   - name: Alicja
-    avatar: alicja.png
+    avatar: alicja.jpeg
     title: Future Rocket Scientist
