--- a/src/data/events.yml
+++ b/src/data/events.yml
@@ -1,4 +1,7 @@
 items:
+  - title: Internet comic @bananrysuje created
+    icon: 🖋️
+    date: 2024.05.20
   - title: Alicja is born
     icon: 🍼
     date: 2023.11.23
