--- a/src/data/animals.yml
+++ b/src/data/animals.yml
@@ -19,7 +19,7 @@ items:
     alive: true
   - name: Wifi
     avatar: wifi.png
-    alive: true
+    alive: false
   - name: Fifi
     avatar: fifi.png
     alive: false
