--- a/src/data/people.yml
+++ b/src/data/people.yml
@@ -2,9 +2,20 @@ items:
   - name: Łukasz
     avatar: lukasz.jpeg
     title: Python Engineer
+    social:
+      - name: GitHub
+        url: https://github.com/lukzmu
+        icon: github
+      - name: Instagram
+        url: https://www.instagram.com/bananrysuje/
+        icon: instagram      
   - name: Anna
     avatar: ania.jpg
     title: Animal Sciences PhD
+    social:
+      - name: Instagram
+        url: https://www.instagram.com/to_be_have/
+        icon: instagram
   - name: Alicja
     avatar: alicja.jpeg
     title: Future Rocket Scientist
