--- a/src/data/people.yml
+++ b/src/data/people.yml
@@ -6,6 +6,9 @@ items:
       - name: GitHub
         url: https://github.com/lukzmu
         icon: github
+      - name: LinkedIn
+        url: https://www.linkedin.com/in/lukzmu/
+        icon: linkedin
       - name: Instagram
         url: https://www.instagram.com/bananrysuje/
         icon: instagram      
