Add post-grad to events

--- a/src/data/events.yml
+++ b/src/data/events.yml
@@ -1,4 +1,6 @@
 items:
+  - title: Łukasz finishes post-graduate in Healthcare Management
+    date: 2024.09.01
   - title: Alicja is born
     date: 2023.11.23
     important: true
