Add missing icon to latest event

--- a/src/data/events.yml
+++ b/src/data/events.yml
@@ -1,5 +1,6 @@
 items:
   - title: Łukasz finishes post-graduate in Healthcare Management
+    icon: 🎓
     date: 2024.09.01
   - title: Alicja is born
     icon: 🍼
