--- a/src/data/people.yml
+++ b/src/data/people.yml
@@ -2,6 +2,14 @@ items:
   - name: Łukasz
     avatar: lukasz.jpeg
     title: Python Engineer
+    social:
+      - name: GitHub
+        url: https://github.com/lukzmu
+        icon: github
+      - name: X
+        url: https://x.com/lukzmu
+        icon: x
+
   - name: Anna
     avatar: ania.jpg
     title: Animal Sciences PhD
