--- a/src/data/people.yml
+++ b/src/data/people.yml
@@ -1,14 +1,14 @@
 items:
   - name: Łukasz
-    avatar: lukasz.jpeg
+    avatar: lukasz.png
     title: Python Engineer
     social:
       - name: GitHub
         url: https://github.com/lukzmu
         icon: github
   - name: Anna
-    avatar: ania.jpg
+    avatar: ania.png
     title: Animal Sciences PhD
   - name: Alicja
-    avatar: alicja.jpeg
+    avatar: alicja.png
     title: Future Rocket Scientist
