Fix typo in file name

--- a/src/data/people.yml
+++ b/src/data/people.yml
@@ -7,7 +7,7 @@ items:
         url: https://github.com/lukzmu
         icon: github
   - name: Anna
-    avatar: ania.png
+    avatar: anna.png
     title: Animal Sciences PhD
   - name: Alicja
     avatar: alicja.png
